--- a/platforms/browser/www/gallery.html
+++ b/platforms/browser/www/gallery.html
@@ -1,5 +1,7 @@
 <html>
-	<head></head>
+	<head>
+   <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/> 
+  </head>
 	<body>
 		<style>
 			/* switching box model for all elements */
@@ -76,12 +78,16 @@ p{
      <div class="pict p12"></div>
   </div>
 
-  <div style="position:fixed;bottom:0;left:0;width:100%;z-index:100;background-color:#ffffff;text-align: center">
+  <div style="position:fixed;bottom:0;left:0;width:100%;z-index:100;background-color:;text-align: center">
   <button id="home" class="btn btn-info" stlye="margin:0"><a href="index.html"><img src="img/icon_home.png" style="width:25px; height:25px;"></a></button>
   <button id="share" class="btn btn-info"stlye="margin:auto"><a href="browse.html"><img src="img/icon_browse.png" style="width:25px; height:25px;"></a></button>
   <button id="share" class="btn btn-info"stlye="margin:auto"><a href="social.html"><img src="img/icon_share.png" style="width:25px; height:25px;"></a></button>
 </div>
 </div>
+
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+      <script type="text/javascript" src="js/materialize.js"></script>
+
 
 
 	</body>
