--- a/www/social.html
+++ b/www/social.html
@@ -148,7 +148,7 @@ a {
 
   <div style="position:fixed;bottom:0;left:0;width:100%;z-index:100;background-color:;text-align: center">
   <button id="home" class="btn btn-info" style="margin:0"><a href="index.html"><img src="img/icon_home.png" style="width:25px; height:25px;"></a></button>
-  <button id="share" class="btn btn-info" style="margin:auto"><a href="browse2.html"><img src="img/icon_browse.png" style="width:25px; height:25px;"></a></button>
+  <button id="share" class="btn btn-info" style="margin:auto"><a href="browse.html"><img src="img/icon_browse.png" style="width:25px; height:25px;"></a></button>
   <button id="share" class="btn btn-info" style="margin:auto"><a href="social.html"><img src="img/icon_share.png" style="width:25px; height:25px;"></a></button>
 </div>
 </body>
